# Multi-Agent-English-Assessment-System

./: CLAUDE.md  LICENSE  README.ko.md  README.md  app.py  config.py  gradio_app.py  pyproject.toml  workflow_builder.py
agents/: assessor.py  base.py  orchestrator.py  state.py  student.py
docs/: architecture.drawio  sequence_diagram.puml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: assessment-result.tsx  criterion-card.tsx  essay-output.tsx  input-form.tsx  mode-selector.tsx  score-badge.tsx
frontend/lib/: api.ts
prompts/: builder.py
prompts/rubric/: rubric.json
prompts/system_prompts/: assessor.md  student.md
