[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "langchain-core>=1.0.3",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]
